Fixed weird padding on mobile

--- a/components/_navigation.scss
+++ b/components/_navigation.scss
@@ -30,12 +30,11 @@
     border: 0;
   }
   @include breakpoints(max-width,xsmall) {
-    padding: ($global-padding / 1.2) 0;
-    font-size: $font-size-base *1.2;
+    font-size: $font-size-base * 1.2;
   }
 }
 
-.#{$component-prefix}nav-item--selected > a{
+.#{$component-prefix}nav-item--selected {
   color: $color-default;
 }
 
@@ -174,6 +173,8 @@
 .#{$component-prefix}breadcrumb {
   display: flex;
   align-items: center;
+  border-bottom: 1px solid $global-border-color;
+  padding-bottom: $global-padding / 2;
   > li {
     display: flex;
     align-items: center;
@@ -187,13 +188,6 @@
         content: "";
       }
     }
-    .#{$component-prefix}breadcrumb-item {
-      padding-left: 0.5rem;
-      font-weight: $font-weight-bold;
-    }
-    .#{$component-prefix}breadcrumb-link {
-      padding: 0.5rem 0.8rem;
-    }
     &:first-child {
       .#{$component-prefix}breadcrumb-item {
         padding-left: 0;
@@ -201,8 +195,19 @@
       }
     }
   }
-  .#{$component-prefix}breadcrumb-item--selected {
-    font-weight: $font-weight-base;
-    color: $color-primary;
-  }
+}
+
+.#{$component-prefix}breadcrumb-item {
+  padding-left: 0.5rem;
+  font-weight: $font-weight-bold;
+}
+
+.#{$component-prefix}breadcrumb-item--selected {
+  font-weight: $font-weight-base;
+  color: $color-primary;
+}
+
+
+.#{$component-prefix}breadcrumb-link {
+  padding: 0.5rem 0.8rem;
 }
